// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="sc-gKckTs izRacH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 hMVFGJ FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 jOynvx"
            disabled=""
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="sc-gKckTs izRacH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 cMXsuX FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 eJyyeU"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="sc-gKckTs izRacH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
      >
        Some input
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 hosPKv"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 cMXsuX FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 eJyyeU"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="sc-gKckTs izRacH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 cMXsuX FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 eJyyeU"
            value="Hi people"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="sc-gKckTs izRacH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 kQHHD FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 eJyyeU"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bPwDLh"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`TextInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 hSiATR"
>
  <div
    class="sc-gKckTs izRacH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 erPdoW FormField__FormFieldBox-m9hood-0 gWgpjB"
    >
      <label
        class="StyledText-sc-1sadyjn-0 weZKr"
      >
        Some input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 cMXsuX FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 eJyyeU"
            value="Hi people"
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kTuWTg"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
